# tap-leaflink-meltano

./: README.md  catalog.json  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_leaflink/: client.py  streams.py  tap.py
tap_leaflink/schemas/: customers.json  line-items.json  order-event-logs.json  orders-received.json  product-categories.json  product-lines.json  products.json
tap_leaflink/tests/: test_core.py
